--- a/resources/templates/pages/blog-simple/article.twig
+++ b/resources/templates/pages/blog-simple/article.twig
@@ -53,7 +53,7 @@
                             </p>
                         {% endif %}
 
-                        {{ include(getTemplate('content')) }}
+                        {{ article.content }}
 
                         <hr class="mt-5 mb-0"/>
 
