--- a/resources/templates/base/components/breadcrumb.twig
+++ b/resources/templates/base/components/breadcrumb.twig
@@ -1,8 +1,8 @@
 <div id="breadcrumb-area"
      class="lazy breadcrumb-area breadcrumb-section breadcrumb-height site-breadcrumb-{{ site.public_id }} page-breadcumb-{{ page.public_id }}"
      data-src="{{ breadcrumb.background_url ?? '' }}" style="{{ breadcrumb.style }} background-repeat: no-repeat; background-size: cover;">
-    <div class="container h-100">
-        <div class="row h-100">
+    <div class="container">
+        <div class="row">
             <div class="col-lg-12 d-flex align-items-center">
                 <div class="breadcrumb-content breadcrumb-text d-flex align-items-start flex-column w-100">
                     {% if breadcrumb.config.show_title %}
