--- a/resources/templates/pages/blog-simple/shared/sidebar.twig
+++ b/resources/templates/pages/blog-simple/shared/sidebar.twig
@@ -1,6 +1,6 @@
 <?php
 /**
- * @var \Adminx\Common\Models\Site                                                  site
+ * @var \Adminx\Common\Models\Sites\Site                                                  site
  * @var \Adminx\Common\Models\Pages\Page                                            page
  * @var \Illuminate\Pagination\LengthAwarePaginator|\Adminx\Common\Models\Article[] articles
  * @var string|null                                                                 searchTerm
