--- a/resources/templates/base/components/breadcrumb.twig
+++ b/resources/templates/base/components/breadcrumb.twig
@@ -1,6 +1,6 @@
 <div id="breadcrumb-area"
      class="lazy breadcrumb-area breadcrumb-section breadcrumb-height site-breadcrumb-{{ site.public_id }} page-breadcumb-{{ page.public_id }}"
-     data-src="{{ breadcrumb.background_url ?? '' }}" style="{{ breadcrumb.style }} background-repeat: no-repeat; background-size: cover;">
+     data-src="{{ breadcrumb.background_url ?? '' }}" style="{{ breadcrumb.style }} background-repeat: no-repeat; background-size: cover; background-image: url({{ breadcrumb.background_url ?? '' }});">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 d-flex align-items-center">
