--- a/resources/templates/pages/blog-simple/index.twig
+++ b/resources/templates/pages/blog-simple/index.twig
@@ -55,7 +55,7 @@
                         <div class="col-12">
                             <div class="pagination-area pt-10">
                                 <nav aria-label="Paginação">
-                                    {{ articles.links('adminx-frontend::layout.inc.pagination') }}
+                                    {{ articles.links('common-frontend::layout.inc.pagination') }}
                                 </nav>
                             </div>
                         </div>
