--- a/resources/templates/widgets/todo/dynamic-content/articles/carousel.twig
+++ b/resources/templates/widgets/todo/dynamic-content/articles/carousel.twig
@@ -6,7 +6,7 @@
  * @var \Adminx\Common\Models\Article[]|\Illuminate\Database\Eloquent\Collection $articles
  */
 ?>
-@extends('adminx-common::layouts.api.ajax-view')
+@extends('common::layouts.api.ajax-view')
 
 @if($articles->count())
     <div
