--- a/resources/templates/widgets/todo/dynamic-content/articles/mosaic.twig
+++ b/resources/templates/widgets/todo/dynamic-content/articles/mosaic.twig
@@ -8,7 +8,7 @@
 
 $articlesQuery = $page.articles().published();
 ?>
-@extends('adminx-common::layouts.api.ajax-view')
+@extends('common::layouts.api.ajax-view')
 
 @if($articles.count())
     <div class="row articles-mosaic articles-mosaic-{{ widgeteable.public_id }} widget-module widget-module-{{ widgeteable.public_id }}">
