--- a/resources/templates/widgets/todo/dynamic-content/custom-list/image-card-grid.twig
+++ b/resources/templates/widgets/todo/dynamic-content/custom-list/image-card-grid.twig
@@ -7,7 +7,7 @@
  * @var \Adminx\Common\Models\CustomLists\CustomListItems\CustomListItemHtml[]|\Illuminate\Database\Eloquent\Collection $customListItems
  */
 ?>
-@extends('adminx-common::layouts.api.ajax-view')
+@extends('common::layouts.api.ajax-view')
 {{--@php
     $customList = $widgeteable->source->data;
     $page = $customList->page;
