--- a/resources/templates/pages/blog-simple/widgets/categories.twig
+++ b/resources/templates/pages/blog-simple/widgets/categories.twig
@@ -12,7 +12,7 @@
                 <ul class="list-group list-group-flush">
                     {% for category in page.categories %}
                         <li class="list-group-item">
-                            <a href="{{ category.urlFrom(page) }}">
+                            <a href="{{ category.url }}">
                                 {{ category.title }}
                             </a>
                         </li>
