--- a/resources/templates/pages/blog-right-sidebar/components/articles/article-miniature-1.twig
+++ b/resources/templates/pages/blog-right-sidebar/components/articles/article-miniature-1.twig
@@ -8,14 +8,19 @@
 {% set big = big ?? false %}
 {% set small = small ?? false %}
 {% set bottomMeta = bottomMeta ?? false %}
+{% set coverMeta = coverMeta ?? false %}
 {% set class = class ?? '' %}
+{% set readMoreText = readMoreText ?? '<span>Ler Mais</span><i class="ms-2 ml-3 fas fa-solid fa-long-arrow-right"></i>' %}
 
 <article id="article-item-{{ article.id }}" class="article-item article-miniature article-miniature-one {{ (big ?? false) ? 'article-big mb-5' : 'mb-4' }} {{ class }}">
     {% if showCover and article.cover_url %}
-        <div class="article-cover img-hover-effect mb-3 {% if showCover and article.cover_url %}mt-3{% endif %}">
+        <div class="article-cover img-hover-effect mb-3 position-relative {% if showCover and article.cover_url %}mt-3{% endif %}">
             <a class="img-zoom-effect" href="{{ article.url }}">
                 <img class="img-full img-fluid w-100" src="{{ article.cover_url }}"
                      alt="{{ article.title }}">
+                {% if showMeta and coverMeta %}
+                    {{ include('@template/components/articles/partials/article-meta.twig', {article: article, class: 'mt-2 badge badge-pill badge-secondary text-white position-absolute px-3 py-2 text-uppercase', style: 'bottom: 20px; left: 20px;'}) }}
+                {% endif %}
             </a>
         </div>
     {% endif %}
@@ -24,7 +29,7 @@
            data-bs-toggle="tooltip"
            title="{{ article.title }}" style="-webkit-line-clamp: {{ titleLines }};">{{ article.title }}</a>
 
-        {% if showMeta and not bottomMeta %}
+        {% if showMeta and not bottomMeta and not coverMeta %}
             {{ include('@template/components/articles/partials/article-meta.twig', {article: article}) }}
         {% endif %}
 
@@ -33,16 +38,19 @@
                style="-webkit-line-clamp: {{ descriptionLines }};">{{ article.description ?? article.limitContent(big ? 500 : 150) }}</p>
         {% endif %}
 
-        {% if showMeta and bottomMeta %}
+        {% if showMeta and bottomMeta and not coverMeta %}
             {{ include('@template/components/articles/partials/article-meta.twig', {article: article, class: 'mt-2'}) }}
         {% endif %}
 
         {% if showReadMore or showCategories %}
-            <p class="button-wrap d-flex justify-content-between align-items-center mb-0 article-footer {{ (big) ? 'mt-5' : 'mt-4' }}">
+            <p class="button-wrap d-flex justify-content-between align-items-center mb-0 article-footer {{ (big) ? 'mt-4' : 'mt-3' }}">
                 {% if showReadMore %}
-                    <a class="btn btn-primary px-4 py-2 my-auto article-readmore-button" href="{{ article.url }}">
+                    <a class="article-link post-link article-readmore-button py-2 d-flex align-items-center" href="{{ article.url }}">
                         {{ readMoreText }}
                     </a>
+                    {#<a class="btn btn-text-dark px-4 py-2 my-auto article-readmore-button" href="{{ article.url }}">
+                        {{ readMoreText }}
+                    </a>#}
                 {% endif %}
 
                 {% if showCategories %}
