--- a/resources/templates/pages/blog-right-sidebar/components/articles/partials/article-meta.twig
+++ b/resources/templates/pages/blog-right-sidebar/components/articles/partials/article-meta.twig
@@ -7,11 +7,11 @@
 {% set dateFormat = dateFormat ?? 'd/m/Y H:i:s' %}
 {% set shortComments = shortComments ?? true %}
 
-{% set authorIcon = authorIcon ?? '<i class="fa-solid fa-user me-1"></i>' %}
-{% set dateIcon = dateIcon ?? '<i class="fa-solid fa-calendar-days me-1"></i>' %}
-{% set commentsIcon = commentsIcon ?? '<i class="fa-solid fa-comments me-1"></i>' %}
+{% set authorIcon = authorIcon ?? '<i class="fa-solid fa-user me-1 mr-1"></i>' %}
+{% set dateIcon = dateIcon ?? '<i class="fas fa-solid fa-calendar me-1 mr-1"></i>' %}
+{% set commentsIcon = commentsIcon ?? '<i class="fa-solid fa-comments me-1 mr-1"></i>' %}
 
-<div id="article-meta-{{ article.id }}" class="article-meta mb-2 d-inline-row text-muted small {{  class ?? '' }}" >
+<div id="article-meta-{{ article.id }}" class="article-meta mb-2 d-inline-row small {{  class ?? 'text-muted' }}" style="{{  style ?? '' }}" >
     {% if showAuthor %}
         <span class="me-3 mr-3 article-meta-author" title="Autor">
             {!! showIcons ? authorIcon : '' !!}
@@ -20,7 +20,7 @@
     {% endif %}
 
     {% if showDate %}
-        <span class="me-3 mr-3 article-meta-date"
+        <span class="article-meta-date"
               title="Postado {{ article.published_at_long }}">
             {{ showIcons ? dateIcon : '' }}
             <time datetime="{{ article.published_at.format('Y-m-d H:i:S') }}">
@@ -30,7 +30,7 @@
     {% endif %}
 
     {% if showComments %}
-        <span class="article-meta-comments" title="Comentários">
+        <span class="ms-3 ml-3 article-meta-comments" title="Comentários">
             {{ showIcons ? commentsIcon : '' }}
             {{ article.comments().count() }} {{ (not shortComments) ? 'Comentários' : '' }}
         </span>
