--- a/resources/templates/pages/blog-right-sidebar/index.twig
+++ b/resources/templates/pages/blog-right-sidebar/index.twig
@@ -5,7 +5,7 @@
                 <div class="blog-item-wrap row">
                     {% if articles.count() %}
                         <div class="col-12 first-article">
-                            {{ include('@template/components/articles/article-miniature-1.twig', {article: articles.first(), big: true}) }}
+                            {{ include('@template/components/articles/article-miniature-1.twig', {article: articles.first(), big: true, showReadMore: true, coverMeta: true}) }}
                             {# <x-frontend::pages.Articles.article-miniature-1 :article="articles.first()" big/> #}
                             <hr class="mb-5"/>
                         </div>
@@ -15,7 +15,7 @@
                                     {% for article in articles.getCollection().forget(0).odd().values() %}
                                         <div class="row">
                                             <div class="col-12">
-                                                {{ include('@template/components/articles/article-miniature-1.twig', {article: article, class: 'article-left-side'}) }}
+                                                {{ include('@template/components/articles/article-miniature-1.twig', {article: article, class: 'article-left-side', showDescription: false, showReadMore: true, coverMeta: true}) }}
 
                                                 {% if not loop.last %}
                                                     <hr class="mb-4"/>
@@ -28,7 +28,7 @@
                                     {% for article in articles.getCollection().forget(0).even().values() %}
                                         <div class="row">
                                             <div class="col-12">
-                                                {{ include('@template/components/articles/article-miniature-1.twig', {article: article, class: 'article-right-side'}) }}
+                                                {{ include('@template/components/articles/article-miniature-1.twig', {article: article, class: 'article-right-side', showDescription: false, showReadMore: true, coverMeta: true}) }}
 
                                                 {% if not loop.last %}
                                                     <hr class="mb-4"/>
