--- a/resources/templates/pages/blog-right-sidebar/article.twig
+++ b/resources/templates/pages/blog-right-sidebar/article.twig
@@ -24,7 +24,7 @@
                         <div class="blog-article-meta mb-2 mt-3 d-flex align-items-center text-muted small">
                                 <span class="me-3 mr-3" data-toggle="tooltip"
                                       title="Postado {{ article.published_at_long }}">
-                                        <i class="fa-solid fa-calendar-days me-1"></i>
+                                        <i class="fas fa-solid fa-calendar me-1"></i>
                                         <time
                                                 datetime="{{ article.published_at.format('Y-m-d H:i:S') }}">{{ article.published_at.diffForHumans() }}</time>
                                     </span>
@@ -63,20 +63,20 @@
                                     <div class="navigation-img  me-2 mr-2">
                                         <a href="{{ article.previousArticle.uri }}"
                                            class="btn btn-dark rounded-0 p-4 text-white">
-                                            <i class="fa-solid fa-angle-left font-size-25 fw-bolder"></i>
+                                            <i class="fas fa-solid fa-angle-left font-size-25 fw-bolder"></i>
                                         </a>
                                     </div>
 
-                                    <div class="navigation-content w-100 ps-xl-4 pt-4 pt-xl-0">
+                                    <div class="navigation-content w-100 ps-xl-4">
                                         <div class="blog-article-meta mb-2 d-inline-row text-muted small">
                                                 <span class="me-3 mr-3"
                                                       title="Postado {{ article.previousArticle.published_at_long }}">
-                                                        <i class="fa-solid fa-calendar-days me-1"></i>
+                                                        <i class="fas fa-solid fa-calendar-days me-1"></i>
                                                         <time
                                                                 datetime="{{ article.previousArticle.published_at.format('Y-m-d H:i:S') }}">{{ article.previousArticle.published_at.diffForHumans() }}</time>
                                                     </span>
                                             <span title="Comentários">
-                                                        <i class="fa-solid fa-comments me-1"></i>
+                                                        <i class="fas fa-solid fa-comments me-1"></i>
                                                         {{ article.previousArticle.comments_count }}
                                                     </span>
                                         </div>
@@ -88,16 +88,16 @@
                             <div class="nextArticle-nav col-12 col-md d-inline-flex align-items-center">
                                 {% if article.nextArticle and article.nextArticle.id %}
                                     <div
-                                            class="navigation-content w-100 text-end text-right pe-xl-4 pb-4 pb-xl-0">
+                                            class="navigation-content w-100 text-end text-right pe-xl-4">
                                         <div class="blog-article-meta mb-2 d-inline-row text-muted small">
                                                 <span class="me-3 mr-3"
                                                       title="Postado {{ article.nextArticle.published_at_long }}">
-                                                        <i class="fa-solid fa-calendar-days me-1"></i>
+                                                        <i class="fas fa-solid fa-calendar me-1"></i>
                                                         <time
                                                                 datetime="{{ article.nextArticle.published_at.format('Y-m-d H:i:S') }}">{{ article.nextArticle.published_at.diffForHumans() }}</time>
                                                     </span>
                                             <span title="Comentários">
-                                                        <i class="fa-solid fa-comments me-1"></i>
+                                                        <i class="fas fa-solid fa-comments me-1"></i>
                                                         {{ article.nextArticle.comments_count }}
                                                     </span>
                                         </div>
@@ -107,7 +107,7 @@
                                     <div class="navigation-img justify-content-end ms-2 ml-2">
                                         <a href="{{ article.nextArticle.url }}"
                                            class="btn btn-dark rounded-0 p-4 text-white">
-                                            <i class="fa-solid fa-angle-right font-size-25 fw-bolder"></i>
+                                            <i class="fas fa-solid fa-angle-right font-size-25 fw-bolder"></i>
                                         </a>
                                     </div>
                                 {% endif %}
