--- a/resources/templates/pages/blog-right-sidebar/article.twig
+++ b/resources/templates/pages/blog-right-sidebar/article.twig
@@ -71,7 +71,7 @@
                                         <div class="blog-article-meta mb-2 d-inline-row text-muted small">
                                                 <span class="me-3 mr-3"
                                                       title="Postado {{ article.previousArticle.published_at_long }}">
-                                                        <i class="fas fa-solid fa-calendar-days me-1"></i>
+                                                        <i class="fas fa-solid fa-calendar me-1"></i>
                                                         <time
                                                                 datetime="{{ article.previousArticle.published_at.format('Y-m-d H:i:S') }}">{{ article.previousArticle.published_at.diffForHumans() }}</time>
                                                     </span>
