--- a/resources/templates/pages/blog-simple/article.twig
+++ b/resources/templates/pages/blog-simple/article.twig
@@ -129,7 +129,7 @@
                                         </div>
                                         <div class="blog-comment-content ms-0 me-0 ml-0 mr-0 w-auto pb-5">
                                             <div class="user-meta">
-                                                <span><strong>{{ comment.name }} -</strong> {{ comment.created_at.diffForHumans() }}</span>
+                                                <span><strong>{{ comment.name }} -</strong> {{ comment.published_at.diffForHumans() }}</span>
                                             </div>
                                             <p class="user-comment mb-4">
                                                 {{ comment.comment }}
