--- a/resources/templates/pages/blog-right-sidebar/article.twig
+++ b/resources/templates/pages/blog-right-sidebar/article.twig
@@ -23,7 +23,7 @@
 
                         <div class="blog-article-meta mb-2 mt-3 d-flex align-items-center text-muted small">
                                 <span class="me-3 mr-3" data-toggle="tooltip"
-                                      title="Postado {{ article.published_at_long }}">
+                                      title="Publicado {{ article.published_at_long }}">
                                         <i class="fas fa-solid fa-calendar me-1"></i>
                                         <time
                                                 datetime="{{ article.published_at.format('Y-m-d H:i:S') }}">{{ article.published_at.diffForHumans() }}</time>
@@ -70,7 +70,7 @@
                                     <div class="navigation-content w-100 ps-xl-4">
                                         <div class="blog-article-meta mb-2 d-inline-row text-muted small">
                                                 <span class="me-3 mr-3"
-                                                      title="Postado {{ article.previousArticle.published_at_long }}">
+                                                      title="Publicado {{ article.previousArticle.published_at_long }}">
                                                         <i class="fas fa-solid fa-calendar me-1"></i>
                                                         <time
                                                                 datetime="{{ article.previousArticle.published_at.format('Y-m-d H:i:S') }}">{{ article.previousArticle.published_at.diffForHumans() }}</time>
@@ -91,7 +91,7 @@
                                             class="navigation-content w-100 text-end text-right pe-xl-4">
                                         <div class="blog-article-meta mb-2 d-inline-row text-muted small">
                                                 <span class="me-3 mr-3"
-                                                      title="Postado {{ article.nextArticle.published_at_long }}">
+                                                      title="Publicado {{ article.nextArticle.published_at_long }}">
                                                         <i class="fas fa-solid fa-calendar me-1"></i>
                                                         <time
                                                                 datetime="{{ article.nextArticle.published_at.format('Y-m-d H:i:S') }}">{{ article.nextArticle.published_at.diffForHumans() }}</time>
