--- a/resources/templates/pages/blog-simple/components/articles/article-basic.twig
+++ b/resources/templates/pages/blog-simple/components/articles/article-basic.twig
@@ -25,7 +25,7 @@
                                         {{ article.user.name }}
                                     </span>--}}#}
             <span class="me-3 mr-3"
-                  title="Postado {{ article.published_at.translatedFormat(config('location.formats.datetime.full')) }}">
+                  title="Publicado {{ article.published_at.translatedFormat(config('location.formats.datetime.full')) }}">
                                         <i class="fa-solid fa-calendar-days me-1"></i>
                                         <time
                                                 datetime="{{ article.published_at.format('Y-m-d H:i:S') }}">{{ article.published_at.diffForHumans() }}</time>
