--- a/resources/templates/pages/blog-right-sidebar/widgets/categories.twig
+++ b/resources/templates/pages/blog-right-sidebar/widgets/categories.twig
@@ -6,7 +6,7 @@
         {% for category in page.categories.sortBy('title') %}
             <li >
                 <a href="{{ category.url }}">
-                    {{ category.title }} <span><i class="fa far fa-angle-right"></i></span>
+                    {{ category.title }} <span><i class="fa fa-angle-right"></i></span>
                 </a>
             </li>
         {% endfor %}
