--- a/resources/templates/pages/blog-right-sidebar/shared/sidebar.twig
+++ b/resources/templates/pages/blog-right-sidebar/shared/sidebar.twig
@@ -5,7 +5,7 @@
             <input type="text" name="q" placeholder="Pesquisar" aria-label="Pesquisar"
                    aria-describedby="blog-widget-searchbox-submit">
             <button type="submit" id="blog-widget-searchbox-submit">
-                <i class="far fa-search"></i>
+                <i class="fa fa-search"></i>
             </button>
         </form>
     </div>
