--- a/resources/templates/widgets/dynamic-content/articles/carousel.twig
+++ b/resources/templates/widgets/dynamic-content/articles/carousel.twig
@@ -1,138 +1,131 @@
-{#<?php
-/***
- * @var \Adminx\Common\Models\Widgets\SiteWidget                                         widgeteable
- * @var \Adminx\Common\Models\Pages\Page                                         page
- * @var \Adminx\Common\Models\Article                                            article
- * @var \Adminx\Common\Models\Article[]|\Illuminate\Database\Eloquent\Collection articles
- */
-?>#}
-
-<style>
-
-    .articles-carousel-{{ widget.public_id }} .articles-carousel-item {
-        margin-bottom: 30px;
-    }
-
-    .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-thumb-wrap {
-        width: 100%;
-        height: 270px;
-        overflow: hidden;
-        position: relative;
-    }
-
-    .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-thumb-wrap .article-thumb {
-        height: 100%;
-        width: 100%;
-        -webkit-transition: all 0.3s ease-out 0s;
-        -moz-transition: all 0.3s ease-out 0s;
-        -ms-transition: all 0.3s ease-out 0s;
-        -o-transition: all 0.3s ease-out 0s;
-        transition: all 0.3s ease-out 0s;
-    }
-
-    .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-thumb-wrap .article-date {
-        position: absolute;
-        left: 30px;
-        bottom: 30px;
-        height: 40px;
-        /*width: 150px;*/
-        padding: 0px 20px;
-        width: auto;
-        line-height: 40px;
-        text-align: center;
-        border-radius: 30px;
-        z-index: 2;
-        color: #fff;
-        background-color: #333;
-        font-size: 14px;
-        font-weight: 700;
-        text-transform: uppercase;
-    }
-
-    .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-desc .article-date {
-        height: 40px;
-        padding: 0px 20px;
-        width: auto;
-        line-height: 40px;
-        text-align: center;
-        border-radius: 30px;
-        z-index: 2;
-        color: #fff;
-        background-color: #333;
-        font-size: 14px;
-        font-weight: 700;
-        text-transform: uppercase;
-    }
-
-    .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-date i {
-        margin-right: 10px;
-    }
-
-    .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-desc {
-        background-color: #f5f5f5;
-        padding: 40px 30px;
-        -webkit-transition: all 0.3s ease-out 0s;
-        -moz-transition: all 0.3s ease-out 0s;
-        -ms-transition: all 0.3s ease-out 0s;
-        -o-transition: all 0.3s ease-out 0s;
-        transition: all 0.3s ease-out 0s;
-    }
-
-    @media (max-width: 1199px) {
-        .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-desc {
-            padding: 35px 25px;
-        }
-    }
-
-    .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-desc .title {
-        font-size: 26px;
-        font-weight: 600;
-        letter-spacing: -1px;
-        margin-bottom: 20px;
-        line-height: 33px;
-    }
-
-    .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-desc .article-description {
-        margin-bottom: 20px;
-    }
-
-    @media (max-width: 1199px) {
-        .posts-carousel-{{ widget.public_id }} .posts-carousel-item .article-desc .title {
-            font-size: 22px;
-        }
-    }
-
-    @media (max-width: 767px) {
-        .posts-carousel-{{ widget.public_id }} .posts-carousel-item .article-desc .title {
-            font-size: 20px;
-        }
-    }
-
-    .posts-carousel-{{ widget.public_id }} .posts-carousel-item .article-desc .article-link {
-        font-weight: 700;
-        color: #333333;
-    }
-
-    .posts-carousel-{{ widget.public_id }} .posts-carousel-item .article-desc .article-link i {
-        margin-left: 10px;
-        position: relative;
-        top: 2px;
-    }
-
-    .posts-carousel-{{ widget.public_id }} .posts-carousel-item .article-desc .article-link:hover {
-        color: #333;
-    }
-
-    .posts-carousel-{{ widget.public_id }} .posts-carousel-item:hover .article-thumb {
-        transform: scale(1.1);
-    }
-
-    .posts-carousel-{{ widget.public_id }} .posts-carousel-item:hover .article-desc {
-        background-color: #fff;
-        box-shadow: 0px 10px 30px 0px rgba(203, 203, 203, 0.3);
-    }
-</style>
 {% if articles.count() %}
+    <style>
+
+        .articles-carousel-{{ widget.public_id }} .articles-carousel-item {
+            margin-bottom: 30px;
+        }
+
+        .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-thumb-wrap {
+            width: 100%;
+            height: 270px;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-thumb-wrap .article-thumb {
+            height: 100%;
+            width: 100%;
+            -webkit-transition: all 0.3s ease-out 0s;
+            -moz-transition: all 0.3s ease-out 0s;
+            -ms-transition: all 0.3s ease-out 0s;
+            -o-transition: all 0.3s ease-out 0s;
+            transition: all 0.3s ease-out 0s;
+        }
+
+        .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-thumb-wrap .article-date {
+            position: absolute;
+            left: 30px;
+            bottom: 30px;
+            height: 40px;
+            /*width: 150px;*/
+            padding: 0px 20px;
+            width: auto;
+            line-height: 40px;
+            text-align: center;
+            border-radius: 30px;
+            z-index: 2;
+            color: #fff;
+            background-color: #333;
+            font-size: 14px;
+            font-weight: 700;
+            text-transform: uppercase;
+        }
+
+        .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-desc .article-date {
+            height: 40px;
+            padding: 0px 20px;
+            width: auto;
+            line-height: 40px;
+            text-align: center;
+            border-radius: 30px;
+            z-index: 2;
+            color: #fff;
+            background-color: #333;
+            font-size: 14px;
+            font-weight: 700;
+            text-transform: uppercase;
+        }
+
+        .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-date i {
+            margin-right: 10px;
+        }
+
+        .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-desc {
+            background-color: #f5f5f5;
+            padding: 25px 30px;
+            height: 136px;
+            -webkit-transition: all 0.3s ease-out 0s;
+            -moz-transition: all 0.3s ease-out 0s;
+            -ms-transition: all 0.3s ease-out 0s;
+            -o-transition: all 0.3s ease-out 0s;
+            transition: all 0.3s ease-out 0s;
+        }
+
+        @media (max-width: 1199px) {
+            .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-desc {
+                padding: 20px 25px;
+                height: 126px;
+            }
+        }
+
+        .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-desc .title {
+            font-size: 26px;
+            font-weight: 600;
+            letter-spacing: -1px;
+            margin-bottom: 20px;
+            line-height: 33px;
+        }
+
+        .articles-carousel-{{ widget.public_id }} .articles-carousel-item .article-desc .article-description {
+            margin-bottom: 20px;
+        }
+
+        @media (max-width: 1199px) {
+            .posts-carousel-{{ widget.public_id }} .posts-carousel-item .article-desc .title {
+                font-size: 22px;
+            }
+        }
+
+        @media (max-width: 767px) {
+            .posts-carousel-{{ widget.public_id }} .posts-carousel-item .article-desc .title {
+                font-size: 20px;
+            }
+        }
+
+        .posts-carousel-{{ widget.public_id }} .posts-carousel-item .article-desc .article-link {
+            font-weight: 700;
+            color: #333333;
+        }
+
+        .posts-carousel-{{ widget.public_id }} .posts-carousel-item .article-desc .article-link i {
+            margin-left: 10px;
+            position: relative;
+            top: 2px;
+        }
+
+        .posts-carousel-{{ widget.public_id }} .posts-carousel-item .article-desc .article-link:hover {
+            color: #333;
+        }
+
+        .posts-carousel-{{ widget.public_id }} .posts-carousel-item:hover .article-thumb {
+            transform: scale(1.1);
+        }
+
+        .posts-carousel-{{ widget.public_id }} .posts-carousel-item:hover .article-desc {
+            background-color: #fff;
+            box-shadow: 0px 10px 30px 0px rgba(203, 203, 203, 0.3);
+        }
+    </style>
     <div
             class="row articles-carousel articles-carousel-{{ widget.public_id }} widget-module widget-module-{{ widget.public_id }}">
         {% for article in articles %}
@@ -157,7 +150,7 @@
                             {% if variables['date_format'] ?? false %}
                                 <time datetime="{{ article.published_at.format('Y-m-d H:i:S') }}" class="article-date">
                                     <i class="far fa-calendar-alt"></i>
-                                    {{ dateHumanFormat ? article.published_at.diffForHumans() : article.published_at.format(dateFormat) }}
+                                    {{ article.published_at.diffForHumans() }}
                                 </time>
                             {% endif %}
                         </div>
@@ -165,14 +158,14 @@
                     <div class="article-desc">
                         <h3 class="title">
                             <a href="{{ article.url }}" class="limit-lines"
-                               style="-webkit-line-clamp: {{ variables['title_lines'] ?? 1 }};">
+                               style="-webkit-line-clamp: {{ variables['title_lines'] ?? 2 }};">
                                 {{ article.title }}
                             </a>
                         </h3>
                         {% if variables['show_description'] ?? false %}
                             <p class="article-description limit-lines"
                                style="-webkit-line-clamp: 5;">{{ article.description ??
-                                article.limitContent(big ? 500 : 150) }}</p>
+                                article.introduction }}</p>
                         {% endif %}
 
                         <div class="d-flex align-items-center justify-content-between">
@@ -184,7 +177,7 @@
                             {% if not article.cover_urland and (variables['date_format'] ?? false) %}
                                 <time datetime="{{ article.published_at.format('Y-m-d H:i:S') }}"
                                       class="article-date d-inline-flex align-items-center">
-                                    <i class="far fa-calendar-alt"></i> {{ dateHumanFormat ? article.published_at.diffForHumans() : article.published_at.format(dateFormat) }}
+                                    <i class="far fa-calendar-alt"></i> {{ article.published_at.diffForHumans() }}
                                 </time>
                             {% endif %}
                         </div>
