--- a/resources/templates/base/components/breadcrumb.twig
+++ b/resources/templates/base/components/breadcrumb.twig
@@ -1,5 +1,5 @@
 <div id="breadcrumb-area"
-     class="lazy breadcrumb-area breadcrumb-section breadcrumb-height site-breadcrumb-{{ site.public_id }} page-breadcumb-{{ page.public_id }}"
+     class="lazy breadcrumb-area breadcrumb-section breadcrumb-height site-breadcrumb-{{ site.public_id }} page-breadcumb-{{ page.public_id }} {{ breadcrumb.css_class }}"
      data-src="{{ breadcrumb.background_url ?? '' }}" style="{{ breadcrumb.style }} background-repeat: no-repeat; background-size: cover; background-image: url({{ breadcrumb.background_url ?? '' }});">
     <div class="container">
         <div class="row">
